[package]
name = "nutype"
version = "0.5.0-beta.2"
authors = ["Serhii Potapov <blake131313@gmail.com>"]
edition = "2021"
description = "The newtype with guarantees."
keywords = ["newtype", "validation", "sanitization", "derive", "invariant"]
license = "MIT"
repository = "https://github.com/greyblake/nutype"
homepage = "https://github.com/greyblake/nutype"
documentation = "https://docs.rs/nutype"
readme = "README.md"
categories = ["data-structures", "rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nutype_macros = { version = "0.5.0-beta.2", path = "../nutype_macros" }

[dev-dependencies]
regex = "1.0"
lazy_static = "1.0"
once_cell = "1.0"

[features]
default = ["std"]

std = ["nutype_macros/std"]
serde = ["nutype_macros/serde"]
regex = ["nutype_macros/regex"]
schemars08 = ["nutype_macros/schemars08"]
new_unchecked = ["nutype_macros/new_unchecked"]
arbitrary = ["nutype_macros/arbitrary"]
