[package]
name = "nutype_macros"
version = "0.2.0"
edition = "2021"
authors = ["Sergey Potapov <blake131313@gmail.com>"]
description = "The newtype with guarantees."
keywords = ["newtype", "validation", "sanitization", "derive"]
license = "MIT"
repository = "https://github.com/greyblake/nutype"
homepage = "https://github.com/greyblake/nutype"
documentation = "https://docs.rs/nutype"
readme = "README.md"
categories = ["data-structures", "rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits"] }

# regex is used at compile-time to verify that a string literal provided
# as `regex = "^foo|bar$"` can be compiled to a Regex without errors.
regex = { version = "1", optional = true }

[lib]
proc-macro = true

[features]
serde1 = []
schemars08 = []
new_unchecked = []
