[package]
name = "test_suite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nutype = { path = "../nutype" }
trybuild = { version = "1.0.71", features = ["diff"] }

serde = { version = "1.0.150", optional = true }
serde_json = { version = "1.0.89", optional = true }

[features]
serde1 = ["nutype/serde1", "serde", "serde_json"]
ui = []
