[package]
name = "test_suite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nutype = { path = "../nutype" }
trybuild = { version = "1.0.71", features = ["diff"] }

serde = { version = "1.0.150", optional = true }
serde_json = { version = "1.0.89", optional = true }
schemars = { version = "0.8", optional = true }
lazy_static = { version = "1", optional = true }
regex = { version = "1", optional = true }
once_cell = { version = "1", optional = true }
arbitrary = "1.3.0"
arbtest = "0.2.0"
ron = "0.8.1"
rmp-serde = "1.1.2"

[features]
serde = ["nutype/serde", "dep:serde", "dep:serde_json"]
regex = ["nutype/regex", "dep:regex", "dep:lazy_static", "dep:once_cell"]
schemars08 = ["schemars"]
new_unchecked = []
ui = []
