[package]
name = "any_arbitrary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1.3.2", features = ["derive"] }
arbtest = "0.2.0"
nutype = { path = "../../nutype", features = ["arbitrary"] }
