[package]
name = "cfg_attr_example"
version = "0.1.0"
edition = "2024"
publish = false

[features]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
nutype = { path = "../../nutype", features = ["serde"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
