[package]
name = "derive_unsafe_example"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "2.0.1", features = ["deref", "deref_mut"] }
nutype = { path = "../../nutype", features = ["derive_unsafe"] }
