[package]
name = "new_unchecked_example"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Serhii Potapov <blake131313@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nutype = { path = "../../nutype", features = ["new_unchecked"] }
