[package]
name = "serde_complex"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Serhii Potapov <blake131313@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nutype = { path = "../../nutype", features = ["serde"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
