[package]
name = "string_regex_email"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Serhii Potapov <blake131313@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nutype = { path = "../../nutype", features = ["regex"] }
regex = "1.10.2"
lazy_static = "1.4.0"
